[gd_scene load_steps=7 format=2]

[ext_resource path="res://Detect Test Sound.wav" type="AudioStream" id=1]
[ext_resource path="res://Interactable.gd" type="Script" id=2]
[ext_resource path="res://Out Test Sound.wav" type="AudioStream" id=3]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="BoxShape" id=2]

[sub_resource type="Animation" id=3]
resource_name = "Rotate"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 45 ), Vector3( 0, 90, 45 ) ]
}

[node name="Interactable" type="Spatial"]
script = ExtResource( 2 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="StaticBody"]
mesh = SubResource( 1 )
skeleton = NodePath("../CollisionShape")

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 2 )

[node name="DetectSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="OutSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="InteractAnimation" type="AnimationPlayer" parent="."]
anims/Rotate = SubResource( 3 )
